# Voxel-Game

./: .gitignore  CMakeLists.txt  Makefile  README.md  Voxel-Game.sln  imgui.ini
res/shader/: chunk.fs  chunk.vs  textured.vs  ui.fs  ui.vs
script/: visualizePoints.py
src/: constants.hpp  contants.cpp  main.cpp  noiseTool.cpp  noiseTool.hpp  player.cpp  player.hpp  voxelGame.cpp  voxelGame.hpp
src/common/: threadSafeMap.hpp
src/graphics/: atlasTexture.cpp  atlasTexture.hpp  camera.cpp  camera.hpp  frustum.cpp  frustum.hpp  mesh.cpp  mesh.hpp  quad.cpp  quad.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  textureAtlas.cpp  textureAtlas.hpp  uiRenderer.cpp  uiRenderer.hpp  window.cpp  window.hpp
src/input/: input.cpp  input.hpp
src/physics/: rotation.txt  transform.cpp  transform.hpp
src/util/: fileUtils.cpp  fileUtils.hpp  log.hpp  mathUtils.cpp  mathUtils.hpp  stringUtils.cpp  stringUtils.hpp  threadPool.cpp  threadPool.hpp  timeUtils.cpp  timeUtils.hpp
src/world/: biome.cpp  biome.hpp  biomeBasedWorldGenerator.cpp  biomeBasedWorldGenerator.hpp  block.cpp  block.hpp  chunk.cpp  chunk.hpp  chunkManager.cpp  chunkManager.hpp  cube.cpp  cube.hpp  debugInfo.hpp  noiseGenerator.cpp  noiseGenerator.hpp  splineBasedWorldGenerator.cpp  splineBasedWorldGenerator.hpp  world.cpp  world.hpp  worldGenerator.cpp  worldGenerator.hpp
